---
source: src/shell/bash.rs
expression: bash.activate(opts)
---
# shellcheck shell=bash
export __MISE_EXE=/some/dir/mise
__MISE_FLAGS=(--status)
__MISE_HOOK_ENABLED=1

export MISE_SHELL=bash

# On first activation, save the original PATH
# On re-activation, we keep the saved original
if [ -z "${__MISE_ORIG_PATH:-}" ]; then
	export __MISE_ORIG_PATH="$PATH"
fi
__MISE_BASH_CHPWD_RAN=0

mise() {
	local command
	command="${1:-}"
	if [ "$#" != 0 ]; then shift; fi

	case "$command" in
	deactivate | shell | sh)
		# if argv doesn't contains -h,--help
		if [[ ! " $* " =~ " --help " ]] && [[ ! " $* " =~ " -h " ]]; then
			eval "$(command /some/dir/mise "$command" "$@")"
			return $?
		fi
		;;
	esac
	if [ -n "${__MISE_LOOKUP_ERROR:-}" ]; then
		printf '%s\n' "$__MISE_LOOKUP_ERROR" >&2
		return 127
	fi
	if [ -n "${__MISE_LOOKUP_EXE:-}" ]; then
		if [ ! -f "$__MISE_LOOKUP_EXE" ]; then
			printf 'mise: selected executable disappeared: %s\n' "$__MISE_LOOKUP_EXE" >&2
			return 127
		fi
		command "$__MISE_LOOKUP_EXE" ${command:+"$command"} "$@"
	else
		command /some/dir/mise ${command:+"$command"} "$@"
	fi
}

_mise_hook() {
	local previous_exit_status=$?
	eval "$(command /some/dir/mise hook-env ${__MISE_FLAGS[@]+"${__MISE_FLAGS[@]}"} --shell-pid $$ -s bash "$@")"
	return $previous_exit_status
}

if [ "$__MISE_HOOK_ENABLED" = "1" ]; then
	_mise_hook_prompt_command() {
		local previous_exit_status=$?
		if [[ ${__MISE_BASH_CHPWD_RAN:-0} == "1" ]]; then
			__MISE_BASH_CHPWD_RAN=0
			unset __MISE_BASH_SKIP_FIRST_PROMPT
			return $previous_exit_status
		fi
		if [[ ${__MISE_BASH_SKIP_FIRST_PROMPT:-0} == "1" ]]; then
			unset __MISE_BASH_SKIP_FIRST_PROMPT
			return $previous_exit_status
		fi
		eval "$(command /some/dir/mise hook-env ${__MISE_FLAGS[@]+"${__MISE_FLAGS[@]}"} --shell-pid $$ -s bash --reason precmd)"
		return $previous_exit_status
	}

	_mise_hook_chpwd() {
		local previous_exit_status=$?
		__MISE_BASH_CHPWD_RAN=1
		eval "$(command /some/dir/mise hook-env ${__MISE_FLAGS[@]+"${__MISE_FLAGS[@]}"} --shell-pid $$ -s bash --reason chpwd)"
		return $previous_exit_status
	}

	_mise_add_prompt_command() {
		if [[ "$(declare -p PROMPT_COMMAND 2>/dev/null)" == "declare -a"* ]]; then
			if [[ " ${PROMPT_COMMAND[*]} " != *" _mise_hook_prompt_command "* ]]; then
				PROMPT_COMMAND=("_mise_hook_prompt_command" "${PROMPT_COMMAND[@]}")
			fi
		elif [[ ";${PROMPT_COMMAND:-};" != *";_mise_hook_prompt_command;"* ]]; then
			local _mise_prompt_command_value="${PROMPT_COMMAND-}"
			printf -v PROMPT_COMMAND '%s' "_mise_hook_prompt_command${_mise_prompt_command_value:+;$_mise_prompt_command_value}"
		fi
	}

	_mise_add_prompt_command
	# shellcheck shell=bash
export -a chpwd_functions
function __zsh_like_cd()
{
  \typeset __zsh_like_cd_hook
  if
    builtin "$@"
  then
    for __zsh_like_cd_hook in chpwd ${chpwd_functions[@]+"${chpwd_functions[@]}"}
    do
      if \typeset -f "$__zsh_like_cd_hook" >/dev/null 2>&1
      then "$__zsh_like_cd_hook" || break # finish on first failed hook
      fi
    done
    true
  else
    return $?
  fi
}

	# shellcheck shell=bash
[[ -n "${ZSH_VERSION:-}" ]] ||
{
  function cd()    { __zsh_like_cd cd    "$@" ; }
  function popd()  { __zsh_like_cd popd  "$@" ; }
  function pushd() { __zsh_like_cd pushd "$@" ; }
}

	chpwd_functions+=(_mise_hook_chpwd)
fi

# `--no-hook-env` means mise does not apply the environment at activation -- zsh, fish and pwsh
# all keep their equivalent call inside this guard, and bash did too until the script moved out
# of bash.rs into this file (#8920), which left the call outside it. The skip flag exists because
# the hook runs here, so the two belong under one condition; it is set first so the `$?` that
# `_mise_hook` saves is not read straight off the guard's condition, where it is the test's
# status rather than a command's (SC2319).
if [ "$__MISE_HOOK_ENABLED" = "1" ]; then
	__MISE_BASH_SKIP_FIRST_PROMPT=1
	_mise_hook --force
fi

# shellcheck shell=bash
if [ -z "${_mise_cmd_not_found:-}" ]; then
	_mise_cmd_not_found=1
	if [ -n "$(declare -f command_not_found_handle)" ]; then
		_mise_cmd_not_found_handle=$(declare -f command_not_found_handle)
		eval "${_mise_cmd_not_found_handle/command_not_found_handle/_command_not_found_handle}"
	fi

	command_not_found_handle() {
		if [[ $1 != "mise" && $1 != "mise-"* ]] && /some/dir/mise hook-not-found -s bash -- "$1"; then
			_mise_hook
			"$@"
		elif [ -n "$(declare -f _command_not_found_handle)" ]; then
			_command_not_found_handle "$@"
		else
			echo "bash: command not found: $1" >&2
			return 127
		fi
	}
fi
